Minor heading fixup

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
         <section class="page-section bg-primary" id="is-it-good">
             <div class="container col-bubble bg-light">
-                <h2 class="mt-4 mb-3 text-center">Praise for Rebuilding Rails</h2>
+                <h2 class="mt-4 mb-3 text-center">Praise for Rebuilding Rails, also by Noah Gibbs</h2>
 
                 <div class="row justify-content-center">
 
