Fix RR reference

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#be-an-expert">Be An Expert</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#what-will-i-learn">What Will I Learn?</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#is-it-good">Is RR Good?</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#is-it-good">Is It Good?</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#try">Try</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#buy">Buy</a></li>
                     </ul>
