Change mockup book cover to correct one

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="col-lg-4 d-none d-lg-block">
-                        <img class="img-fluid" src="img/mockup_book.jpg" style="padding: 2rem" width="350" height="400" />
+                        <img class="img-fluid" src="img/cover_400_533.png" style="padding: 2rem" width="400" height="533" />
                     </div>
                 </div>
             </div>
