Minor text edits

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                         </p>
 
                         <p>
-                            Or you can learn the fundamentals that don't change. HTTP has been around since the mid-90's. It's not going away. Even when it changes, it uses a lot of the same pieces. The pieces that you'll know, once you've built it. You'll be building on top of TCP/IP, which dates back to 1974... These are pieces that are <b>not going away</b>.
+                            Or you can learn the fundamentals that don't change. HTTP has been around since the mid-90's. It's not going away. Even when it changes, it uses a lot of the same pieces. The pieces that you'll know, once you've built it. You'll be building on top of TCP/IP, which dates back to 1974... These are pieces that are <span class="key-point">not going away</span>.
                         </p>
 
                         <p>
-                            No book can fully prepare you. That takes practice. But Rebuilding HTTP can start you on that practice and show you <b>how</b> to practice. Nobody understands protocols and internals like an engineer who has built them. That, dear reader, could be you.
+                            No book can fully prepare you. That takes practice. But Rebuilding HTTP can start you on that practice and show you <span class="key-point">how</span> to practice. Nobody understands protocols and internals like an engineer who has built them. That, dear reader, could be you.
                         </p>
                     </div>
 
@@ -139,7 +139,7 @@
                         </p>
 
                         <p>
-                            <span class="key-point">You'll need a Mac or Linux computer</span>. I won't stop you from trying with WSL, but I can answer your questions about Mac and Linux.
+                            <span class="key-point">You'll need a Mac or Linux computer</span>. I won't stop you from trying with WSL on Windows, but I can only answer your questions about Mac and Linux.
                         </p>
 
                         <p>
