Use URL for correct product on Gumroad

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ window._load_script = function(url, callback) {
             <div class="container text-center col-12 col-sm-6">
                 <h2 class="mb-4">Start Rebuilding from $39.99</h2>
 
-                <a class="btn btn-primary btn-xl mb-4" href="https://noahgibbs.gumroad.com/l/rebuilding_rails">Buy on Gumroad</a>
+                <a class="btn btn-primary btn-xl mb-4" href="https://noahgibbs.gumroad.com/l/rebuilding_http">Buy on Gumroad</a>
                 <p class="mb-4">
                     Gumroad offers payment via credit cards and PayPal. If you aren't 100% satisfied then <span class="key-point">get a full refund with no questions asked</span> within 60 days.
                 </p>
@@ -796,8 +796,8 @@ window._load_script = function(url, callback) {
             <hr class="divider my-4" />
 
             <div class="container text-center col-12 col-sm-6">
-                <!-- <a class="gumroad-button mb-4" href="https://noahgibbs.gumroad.com/l/rebuilding_rails?wanted=true" target="_blank">Buy on Gumroad</a> -->
-                <a class="btn btn-primary btn-xl mb-4" href="https://noahgibbs.gumroad.com/l/rebuilding_rails">Buy on Gumroad</a>
+                <!-- <a class="gumroad-button mb-4" href="https://noahgibbs.gumroad.com/l/rebuilding_http?wanted=true" target="_blank">Buy on Gumroad</a> -->
+                <a class="btn btn-primary btn-xl mb-4" href="https://noahgibbs.gumroad.com/l/rebuilding_http">Buy on Gumroad</a>
             </div>
         </section>
 
