Update table of contents

--- a/index.html
+++ b/index.html
@@ -127,11 +127,17 @@
                         </p>
 
                         <ul class="">
-                            <li>Chapter One: Socket Servers</li>
-                            <li>Chapter Two: GET Requests</li>
-                            <li>Chapter Three: Responses</li>
-                            <li>Chapter Four: POST Requests</li>
-                            <li>Chapter Five: ...</li>
+                            <li>Chapter One: TCP/IP Socket Servers</li>
+                            <li>Chapter Two: HTTP GET Requests</li>
+                            <li>Chapter Three: HTTP Responses</li>
+                            <li>Chapter Four: a Framework</li>
+                            <li>Chapter Five: POST Requests</li>
+                            <li>Chapter Six: Breaking the Server (Error Handling)</li>
+                            <li>Chapter Seven: HTTP and Rack</li>
+                            <li>Chapter Eight: HTTP Caching</li>
+                            <li>Chapter Nine: Uploading Files</li>
+                            <li>Chapter Ten: Small Pieces (Misc)</li>
+                            <li>Historical Accidents, Background and Stories</li>
                         </ul>
 
                         <p>
