Minor ToC update

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                             <li>Chapter Nine: Uploading Files</li>
                             <li>Chapter Ten: Small Pieces (Misc)</li>
                             <li>Historical Accidents, Background and Stories</li>
+                            <li>Answers to Exercises</li>
                         </ul>
 
                         <p>
